static/css/app.css
* {
  box-sizing: border-box; }

html, body {
  padding: 0;
  margin: 0;
  height: 100%;
  width: 100%;
  font-family: 'Helvetica', 'Verdana', sans-serif;
  font-weight: 400;
  font-display: optional;
  color: #444;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale; }

html {
  overflow: hidden; }

body {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-items: stretch;
  align-content: stretch;
  background: #ececec; }

header {
  width: 100%;
  height: 56px;
  color: #000;
  background: #CDC612;
  position: fixed;
  font-size: 20px;
  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 2px 9px 1px rgba(0, 0, 0, 0.12), 0 4px 2px -2px rgba(0, 0, 0, 0.2);
  padding: 16px 16px 0 16px;
  will-change: transform;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  flex-direction: row;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  justify-content: flex-start;
  align-items: stretch;
  align-content: center;
  -webkit-transition: -webkit-transform 0.233s cubic-bezier(0, 0, 0.21, 1) 0.1s;
  transition: -webkit-transform 0.233s cubic-bezier(0, 0, 0.21, 1) 0.1s;
  transition: transform 0.233s cubic-bezier(0, 0, 0.21, 1) 0.1s;
  transition: transform 0.233s cubic-bezier(0, 0, 0.21, 1) 0.1s, -webkit-transform 0.233s cubic-bezier(0, 0, 0.21, 1) 0.1s;
  z-index: 1000; }

header .headerButton {
  width: 24px;
  height: 24px;
  margin-right: 16px;
  text-indent: -30000px;
  overflow: hidden;
  border: none;
  outline: none;
  cursor: pointer; }

header #butAdd {
  background: url(../../static/icons/add.svg) center center no-repeat; }

header #butSettings {
  background: url(../../static/icons/settings.svg) center center no-repeat; }

header #butHighscore {
  background: url(../../static/icons/bookmark.svg) center center no-repeat; }

.title {
  font-weight: 400;
  font-size: 20px;
  margin: 0;
  flex: 1; }

.loader {
  left: 50%;
  top: 50%;
  position: fixed;
  transform: translate(-50%, -50%); }

.loader #spinner {
  box-sizing: border-box;
  stroke: #673AB7;
  stroke-width: 3px;
  transform-origin: 50%;
  animation: line 1.6s cubic-bezier(0.4, 0, 0.2, 1) infinite, rotate 1.6s linear infinite; }

main {
  padding-top: 60px;
  flex: 1;
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  display: flex;
  flex-direction: column; }

#mapid {
  width: 100%;
  min-height: 40%;
  flex: 1 0; }

p {
  margin: 15px 10px; }

/*# sourceMappingURL=app.css.map */

